# POS

./: CMakeLists.txt  client.c  client.h  libraries.h  main.c  server.c  server.h  shared.h  terminalDefinition.h  terminal_display.c  terminal_display.h
klient/: my_socket.c  my_socket.h
server/pos_sockets/: active_socket.c  active_socket.h  passive_socket.c
